Play around with different collectors.